feat(architecture): define initial project architecture and docs
Defines the initial software architecture and documentation structure for the project.

- Refactors the /docs directory to align with the standard defined in the architect persona.
- Creates the initial data model (ER diagram).
- Defines the core API endpoints and DTOs.
- Specifies the JWT-based authentication strategy.
- Adds the frontend project to version control.
- Establishes the development setup guide using Docker Compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,28 @@
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: weather_dashboard_frontend
+    ports:
+      - "80:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
+    command: npm run dev
+    depends_on:
+      - backend
+
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: weather_dashboard_backend
     ports:
-      - "3000:3000"
+      - "3001:3000"
     env_file:
       - ./backend/.env
     depends_on:
